# AutoRCX

./: Boitier Youness TALEB.stl  Fifth session's report.md  First session's report.md  Fourth session's report.md  README.md  boîte arduino version finale.f3d
Additional reports/: 10th report.md  1st report.md  2nd report.md  3rd report.md  4th report.md  5th report.md  6th report.md  7th report.md  8th report.md  9th report.md  README.md
Article/: AutoRCX Article.docx  AutoRCX presentation.pptx  README.md  The Autonomous RC Car Article.docx
C++ & Arduino/: LettreMorse.cpp.ino  LettreMorse.h  Main.ino  Presentation of the morse.md code  README.md  Traducteur.cpp  Traducteur.h
CAD (CAO) and Laser Cutting/: README.md
Code/: AutoRCX ARDUINO code.md  Autonomous RC Car ARDUINO code.md  NVIDIA JETSON code  NVIDIA JETSON code.md  New improved ARDUINO code for the AutoRCX.md  Other_Code.ino  README.md  arduino_control.cpp  arduino_ctrl_2.cpp
IMU/BNO055/: README.md
IMU/LSM9DS1/lsm9ds1_driver/: CMakeLists.txt  package.xml
IMU/LSM9DS1/lsm9ds1_driver/src/: jetson_lsm9ds1_driver.cpp  jetson_lsm9ds1_driver.h  lsm9ds1_driver.cpp  lsm9ds1_driver.h  main.cpp  raw_data_node.cpp  raw_data_node.h
IMU/MPU6050/ros2_mpu6050/: CMakeLists.txt  README.md  package.xml
IMU/MPU6050/ros2_mpu6050/include/: mpu6050driver.h  mpu6050sensor.h
IMU/MPU6050/ros2_mpu6050/src/: mpu6050driver.cpp  mpu6050sensor.cpp
Linux Shell Bash/: README.md  dump_database.timer  setup-dump-database-logs-cleanup.md
My project reports/: 10th session's report.md  11th session's report.md  12th session's report.md  13th session's report.md  14th session's report.md  16th session's report.md  17th session's report.md  18th sessions's report.md  19th session's report.md  1st session's report.md  20th session's report.md  21st session's report.md  6th session's report.md  7th session's report.md  8th session's report.md  9th session's report.md  AutoRCX final report.docx  Eighth session's report.md  Fifteenth session's report.md  Fifth session's report.md  Fourth session's report.md  Ninth session's report.md  README.md  Seventh session's report.md  Sixth session's report.md
My project reports (2nd year)/: 1st session.md  README.md
My project reports (3rd year)/: 10th report.md  11th report.md  1st report.md  2nd report.md  3rd session.md  4th report.md  5th report.md  6th report.md  7th report.md  8th report.md  9th report.md
My project reports (third year)/: 1st report.md
NVIDIA/: setup-dump-database-service.md
Odometry/: KY-040 rotary encoder odometry.py  README.md
Python/: client.py  param launch.launch  publisher.py  read_bag.py  server.py  subscriber.py
ROS2 and Arduino serial communication/: README.md
ROS2 and Arduino wired-wireless communication/: README.md  ultrasonics_code.ino
SLAM/: README.md
Youness' reports/: 5th Report.docx  7th Report.docx  Rapport 6.docx  Rapport.odt  Report 4th session.docx  Report 9.docx  Report.docx  report 10.docx  report 11.docx  report 12.docx
(+41 files in other folders)
